@@ -3,6 +3,7 @@ Changelog for App-Magpie
 {{$NEXT}}
  - old: new set "null" if one of the old/new version is 0
  - old: new set "confused" when cpan reports a difference although there isn't
+ - fix: auto-converting SPEC to use Makefile.PL or Build.PL if needed
 
 2.002     2013-06-10 13:47:21 Europe/Paris
  - dwim: allow dwimery to continue when package should be updated again
